--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.8.5",
     "@types/styled-components": "^4.1.18",
+    "firebase": "^6.4.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
