--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   "rules": {
     "prettier/prettier": ["error"],
     "@typescript-eslint/no-empty-interface": 1,
+    "@typescript-eslint/no-explicit-any": 0,
     "react/prop-types": 0
   }
 }
