--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/styled-components": "^4.1.18",
     "firebase": "^6.4.0",
     "react": "^16.9.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "short-id": "^0.1.0-1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
