--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,10 @@
     "prettier/prettier": ["error"],
     "@typescript-eslint/no-empty-interface": 1,
     "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+    ],
     "react/prop-types": 0
   }
 }
