--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
@@ -12,8 +13,11 @@
     "react": "^16.9.0",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
     "short-id": "^0.1.0-1",
     "styled-components": "^4.3.2",
     "typescript": "3.5.3"
@@ -40,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@types/reach__router": "^1.2.4",
+    "@types/react-redux": "^7.1.2",
+    "@types/redux-actions": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^6.1.0",
