--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,7 @@
     "prettier/prettier": ["error"],
     "@typescript-eslint/no-empty-interface": 1,
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-    ],
+    "@typescript-eslint/no-unused-vars": 0,
     "react/prop-types": 0
   }
 }
